--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -464,7 +464,7 @@ Llegamos, limpiamos y dejamos todo en orden.
 
 <a class="cta"
 
-href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/?empresa_id=trampaclean&vendedor=trampaclean"
+href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form/?empresa_id=trampaclean&vendedor=trampaclean"
 
 target="_blank">
 
@@ -509,7 +509,7 @@ target="_blank">
 
 <a class="link"
 
-href="https://wa.me/50763515950?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
+href="https://wa.me/50768357174?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
 
 target="_blank">
 
@@ -555,3 +555,4 @@ target="_blank">
 
 </body>
 </html>
+
