--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -1,559 +1,474 @@
 <!doctype html>
 <html lang="es">
 <head>
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-
-<title>Trampa Clean — Expo Horeca</title>
-
-<style>
-
-/* COLORES */
-:root{
-
---blue:#0E2644;
---blue2:#103051;
---orange:#FF4A00;
-
---bg:#F3F8FF;
---text:#0B1B33;
---muted:#55637c;
-
-}
-
-*{
-box-sizing:border-box;
-margin:0;
-padding:0;
-}
-
-body{
-
-font-family:system-ui,-apple-system,Segoe UI,Roboto;
-
-background:
-
-radial-gradient(900px 600px at 20% 10%,rgba(14,38,68,.08),transparent),
-
-radial-gradient(800px 600px at 90% 30%,rgba(255,74,0,.06),transparent),
-
-linear-gradient(180deg,#fff,var(--bg));
-
-min-height:100vh;
-
-color:var(--text);
-
-}
-
-
-/* BLOBS FLOTANTES */
-
-.blob{
-
-position:fixed;
-
-width:600px;
-height:600px;
-
-border-radius:999px;
-
-filter:blur(30px);
-
-opacity:.45;
-
-z-index:-2;
-
-animation:float 18s ease-in-out infinite;
-
-}
-
-.b1{
-
-top:-200px;
-left:-200px;
-
-background:
-radial-gradient(circle,rgba(14,38,68,.5),transparent 70%);
-
-}
-
-.b2{
-
-right:-260px;
-top:200px;
-
-background:
-radial-gradient(circle,rgba(255,74,0,.35),transparent 70%);
-
-animation-delay:-5s;
-
-}
-
-@keyframes float{
-
-50%{
-
-transform:translateY(-40px);
-
-}
-
-}
-
-
-/* CONTENEDOR */
-
-.wrap{
-
-width:min(560px,92vw);
-
-margin:auto;
-
-padding:20px 0;
-
-}
-
-
-/* CARD */
-
-.card{
-
-background:rgba(255,255,255,.6);
-
-border-radius:26px;
-
-backdrop-filter:blur(22px);
-
-border:1px solid rgba(14,38,68,.12);
-
-box-shadow:
-
-0 30px 80px rgba(0,0,0,.1);
-
-overflow:hidden;
-
-animation:cardFloat 6s ease-in-out infinite;
-
-}
-
-@keyframes cardFloat{
-
-50%{
-
-transform:translateY(-6px);
-
-}
-
-}
-
-
-/* PANEL AZUL */
-
-.top{
-
-background:
-
-linear-gradient(180deg,var(--blue2),var(--blue));
-
-padding:22px 18px;
-
-color:white;
-
-text-align:center;
-
-}
-
-
-/* LOGOS CENTRADOS */
-
-.logoRow{
-
-display:flex;
-
-justify-content:center;
-
-align-items:center;
-
-gap:20px;
-
-margin-bottom:14px;
-
-flex-wrap:wrap;
-
-}
-
-.logoRow img{
-
-height:48px;
-
-object-fit:contain;
-
-filter:drop-shadow(0 10px 18px rgba(0,0,0,.3));
-
-}
-
-
-/* TITULO */
-
-.brand h1{
-
-font-size:14px;
-
-letter-spacing:.14em;
-
-text-transform:uppercase;
-
-}
-
-.brand p{
-
-opacity:.8;
-
-font-size:13px;
-
-margin-top:4px;
-
-}
-
-
-/* TEXTO */
-
-.content{
-
-padding:20px;
-
-text-align:center;
-
-}
-
-.content h2{
-
-font-size:22px;
-
-margin-bottom:8px;
-
-}
-
-.content p{
-
-font-size:14px;
-
-color:var(--muted);
-
-}
-
-
-/* CTA */
-
-.ctaWrap{
-
-padding:10px 20px 20px;
-
-}
-
-.cta{
-
-display:flex;
-
-justify-content:center;
-
-align-items:center;
-
-text-decoration:none;
-
-font-weight:900;
-
-letter-spacing:.05em;
-
-text-transform:uppercase;
-
-padding:15px;
-
-border-radius:18px;
-
-background:
-
-linear-gradient(135deg,var(--orange),#ff7a40);
-
-color:white;
-
-box-shadow:
-
-0 18px 50px rgba(255,74,0,.3);
-
-transition:.2s;
-
-}
-
-.cta:hover{
-
-transform:translateY(-2px);
-
-}
-
-.note{
-
-text-align:center;
-
-font-size:12px;
-
-color:var(--muted);
-
-margin-top:10px;
-
-}
-
-
-/* LINKS TIPO LINKTREE */
-
-.links{
-
-display:grid;
-
-gap:12px;
-
-padding:14px;
-
-}
-
-.link{
-
-display:flex;
-
-align-items:center;
-
-gap:14px;
-
-padding:15px;
-
-border-radius:18px;
-
-background:
-
-rgba(255,255,255,.6);
-
-backdrop-filter:blur(18px);
-
-border:1px solid rgba(14,38,68,.1);
-
-text-decoration:none;
-
-color:var(--text);
-
-box-shadow:
-
-0 12px 30px rgba(0,0,0,.06);
-
-transition:.2s;
-
-}
-
-.link:hover{
-
-transform:translateY(-3px);
-
-}
-
-.ico{
-
-width:44px;
-height:44px;
-
-display:flex;
-
-align-items:center;
-
-justify-content:center;
-
-border-radius:14px;
-
-background:
-
-rgba(14,38,68,.06);
-
-font-size:20px;
-
-}
-
-.text b{
-
-display:block;
-
-font-size:15px;
-
-}
-
-.text span{
-
-font-size:13px;
-
-color:var(--muted);
-
-}
-
-.arrow{
-
-margin-left:auto;
-
-opacity:.5;
-
-font-size:20px;
-
-}
-
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Trampa Clean — Expo Horeca</title>
+
+  <style>
+    :root{
+      --blue:#0E2644;
+      --blue2:#103051;
+      --orange:#FF4A00;
+
+      --bg:#F3F8FF;
+      --text:#0B1B33;
+      --muted:#55637c;
+
+      --glass: rgba(255,255,255,.65);
+      --glass2: rgba(255,255,255,.58);
+      --border: rgba(14,38,68,.12);
+
+      --shadow: 0 28px 80px rgba(0,0,0,.12);
+      --radius: 26px;
+      --blur: 22px;
+    }
+
+    *{ margin:0; padding:0; box-sizing:border-box; }
+    body{
+      font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      color: var(--text);
+      min-height:100vh;
+      overflow-x:hidden;
+      background:
+        radial-gradient(900px 600px at 15% 10%,rgba(14,38,68,.08),transparent),
+        radial-gradient(800px 600px at 90% 20%,rgba(255,74,0,.06),transparent),
+        linear-gradient(180deg,#fff,var(--bg));
+    }
+
+    /* blobs */
+    .blob{
+      position:fixed;
+      width:640px; height:640px;
+      border-radius:999px;
+      filter: blur(32px);
+      opacity:.45;
+      z-index:-2;
+      pointer-events:none;
+      animation: float 18s ease-in-out infinite;
+    }
+    .b1{
+      top:-220px; left:-220px;
+      background: radial-gradient(circle,rgba(14,38,68,.52),transparent 70%);
+    }
+    .b2{
+      right:-280px; top:260px;
+      background: radial-gradient(circle,rgba(255,74,0,.35),transparent 70%);
+      animation-delay:-6s;
+    }
+    @keyframes float{ 50%{ transform: translateY(-45px); } }
+
+    .wrap{
+      width:min(560px,92vw);
+      margin:auto;
+      padding:22px 0 26px;
+    }
+
+    /* ✅ Animación al escanear (entrada) */
+    .scanEnter{
+      opacity: 0;
+      transform: translateY(14px) scale(.99);
+      filter: blur(10px);
+      animation: enter 700ms cubic-bezier(.2,.8,.2,1) forwards;
+    }
+    @keyframes enter{
+      to{
+        opacity:1;
+        transform: translateY(0) scale(1);
+        filter: blur(0);
+      }
+    }
+
+    .card{
+      background: var(--glass);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      backdrop-filter: blur(var(--blur));
+      -webkit-backdrop-filter: blur(var(--blur));
+      box-shadow: var(--shadow);
+      overflow:hidden;
+      position:relative;
+      animation: cardFloat 6s ease-in-out infinite;
+      will-change: transform;
+    }
+    @keyframes cardFloat{ 50%{ transform: translateY(-7px); } }
+
+    /* brillo fino alrededor del card */
+    .card:after{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius: var(--radius);
+      padding:1px;
+      background: linear-gradient(135deg,
+        rgba(255,255,255,.55),
+        rgba(14,38,68,.10),
+        rgba(255,74,0,.10),
+        rgba(255,255,255,.35)
+      );
+      -webkit-mask:
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      pointer-events:none;
+      opacity:.85;
+    }
+
+    .top{
+      background: linear-gradient(180deg,var(--blue2),var(--blue));
+      padding:24px 18px 18px;
+      text-align:center;
+      color:white;
+      position:relative;
+    }
+    .top:before{
+      content:"";
+      position:absolute;
+      inset:-45%;
+      background:
+        radial-gradient(circle at 30% 20%, rgba(255,255,255,.18), transparent 52%),
+        radial-gradient(circle at 70% 75%, rgba(255,74,0,.12), transparent 55%);
+      filter: blur(10px);
+      opacity:.9;
+      pointer-events:none;
+    }
+
+    /* ✅ Logos centrados + flotantes + glow */
+    .logoRow{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:22px;
+      flex-wrap:wrap;
+      margin-bottom:14px;
+      position:relative;
+      z-index:1;
+    }
+
+    .logoLink{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 10px 14px;
+      border-radius: 18px;
+      background: rgba(255,255,255,.10);
+      border: 1px solid rgba(255,255,255,.16);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: 0 18px 44px rgba(0,0,0,.18);
+      position:relative;
+      overflow:hidden;
+      transform: translateZ(0);
+      animation: logoFloat 4.8s ease-in-out infinite;
+    }
+    .logoLink:nth-child(2){ animation-delay: -1.1s; }
+
+    @keyframes logoFloat{
+      0%,100%{ transform: translateY(0px); }
+      50%{ transform: translateY(-6px); }
+    }
+
+    /* brillo que pasa por el logo */
+    .logoLink:before{
+      content:"";
+      position:absolute;
+      inset:-40%;
+      background: linear-gradient(90deg,
+        transparent 0%,
+        rgba(255,255,255,.18) 45%,
+        rgba(255,255,255,.42) 52%,
+        rgba(255,255,255,.18) 58%,
+        transparent 100%
+      );
+      transform: rotate(12deg) translateX(-40%);
+      animation: shine 3.8s ease-in-out infinite;
+      opacity:.75;
+      pointer-events:none;
+    }
+    @keyframes shine{
+      0%{ transform: rotate(12deg) translateX(-55%); }
+      55%{ transform: rotate(12deg) translateX(55%); }
+      100%{ transform: rotate(12deg) translateX(55%); }
+    }
+
+    /* glow alrededor */
+    .logoLink:after{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      border-radius: 20px;
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.28), transparent 60%),
+                  radial-gradient(circle at 70% 70%, rgba(255,74,0,.14), transparent 62%);
+      filter: blur(10px);
+      opacity:.85;
+      pointer-events:none;
+    }
+
+    .logoRow img{
+      height:46px;
+      max-width: 190px;
+      object-fit:contain;
+      display:block;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
+      position:relative;
+      z-index:1;
+    }
+
+    .brand h1{
+      font-size:14px;
+      letter-spacing:.14em;
+      text-transform:uppercase;
+      position:relative;
+      z-index:1;
+    }
+    .brand p{
+      opacity:.85;
+      font-size:13px;
+      margin-top:4px;
+      position:relative;
+      z-index:1;
+    }
+
+    .content{
+      padding:22px;
+      text-align:center;
+      background: transparent;
+    }
+    .content h2{
+      font-size:22px;
+      margin-bottom:10px;
+    }
+    .content p{
+      font-size:14px;
+      color:var(--muted);
+      line-height:1.5;
+    }
+
+    /* ✅ Botón descuento con glow animado */
+    .ctaWrap{ padding:0 22px 22px; }
+    .cta{
+      position:relative;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      padding:16px;
+      border-radius:18px;
+      text-decoration:none;
+      font-weight:900;
+      text-transform:uppercase;
+      letter-spacing:.05em;
+      color:white;
+      background: linear-gradient(135deg,var(--orange),#ff7a40);
+      box-shadow: 0 18px 50px rgba(255,74,0,.30);
+      transition: transform .2s, filter .2s;
+      overflow:hidden;
+      transform: translateZ(0);
+    }
+    .cta:hover{ transform: translateY(-2px); filter: brightness(1.02); }
+
+    /* brillo que pasa por el botón */
+    .cta:before{
+      content:"";
+      position:absolute;
+      inset:-40%;
+      background: linear-gradient(90deg,
+        transparent 0%,
+        rgba(255,255,255,.20) 45%,
+        rgba(255,255,255,.55) 52%,
+        rgba(255,255,255,.20) 58%,
+        transparent 100%
+      );
+      transform: rotate(12deg) translateX(-60%);
+      animation: ctaShine 2.8s ease-in-out infinite;
+      pointer-events:none;
+      opacity:.85;
+    }
+    @keyframes ctaShine{
+      0%{ transform: rotate(12deg) translateX(-65%); }
+      55%{ transform: rotate(12deg) translateX(65%); }
+      100%{ transform: rotate(12deg) translateX(65%); }
+    }
+
+    /* borde glow pulsante */
+    .cta:after{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      border-radius: 20px;
+      background: radial-gradient(circle at 30% 35%, rgba(255,255,255,.25), transparent 55%),
+                  radial-gradient(circle at 70% 70%, rgba(255,255,255,.18), transparent 60%);
+      filter: blur(10px);
+      opacity:.8;
+      animation: pulse 1.9s ease-in-out infinite;
+      pointer-events:none;
+    }
+    @keyframes pulse{
+      0%,100%{ opacity:.55; transform: scale(1); }
+      50%{ opacity:.95; transform: scale(1.01); }
+    }
+
+    .note{
+      text-align:center;
+      font-size:12px;
+      color:var(--muted);
+      margin-top:10px;
+    }
+
+    .links{
+      display:grid;
+      gap:12px;
+      padding:14px;
+    }
+    .link{
+      display:flex;
+      align-items:center;
+      gap:14px;
+      padding:16px;
+      border-radius:18px;
+      background: var(--glass2);
+      border:1px solid rgba(14,38,68,.10);
+      backdrop-filter: blur(18px);
+      -webkit-backdrop-filter: blur(18px);
+      text-decoration:none;
+      color:var(--text);
+      box-shadow: 0 12px 32px rgba(0,0,0,.06);
+      transition: transform .2s, background .2s;
+    }
+    .link:hover{
+      transform: translateY(-3px);
+      background: rgba(255,255,255,.72);
+    }
+    .ico{
+      width:44px; height:44px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      border-radius:14px;
+      background: rgba(14,38,68,.06);
+      font-size:20px;
+      flex:0 0 auto;
+    }
+    .text b{ display:block; font-size:15px; }
+    .text span{ font-size:13px; color:var(--muted); }
+    .arrow{ margin-left:auto; font-size:20px; opacity:.5; }
+
+    /* Accesibilidad */
+    @media (prefers-reduced-motion: reduce){
+      .blob, .card, .logoLink, .cta, .scanEnter{ animation:none !important; }
+      .logoLink:before, .cta:before, .cta:after{ animation:none !important; }
+      .link, .cta{ transition:none !important; }
+    }
+  </style>
 </head>
 
 <body>
-
-<div class="blob b1"></div>
-<div class="blob b2"></div>
-
-<div class="wrap">
-
-<section class="card">
-
-<div class="top">
-
-<!-- ✅ LOGOS CENTRADOS ARRIBA -->
-
-<div class="logoRow">
-
-<a href="https://expohorecapanama.com/" target="_blank">
-
-<img src="logo-expo.png" alt="Expo Horeca">
-
-</a>
-
-<a href="https://trampaclean.com/" target="_blank">
-
-<img src="logo-trampaclean.png" alt="Trampa Clean">
-
-</a>
-
-</div>
-
-<div class="brand">
-
-<h1>TRAMPA CLEAN SERVICES</h1>
-
-<p>Soluciones profesionales de limpieza</p>
-
-</div>
-
-</div>
-
-
-<div class="content">
-
-<h2>¿Tu trampa de grasa está al día?</h2>
-
-<p>
-
-Si huele mal, se tapa o te preocupa una inspección,
-nosotros lo resolvemos.
-
-Llegamos, limpiamos y dejamos todo en orden.
-
-</p>
-
-</div>
-
-
-<div class="ctaWrap">
-
-<a class="cta"
-
-href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form?empresa_id=trampaclean&vendedor=trampaclean"
-
-target="_blank">
-
-RECLAMA TU DESCUENTO
-
-</a>
-
-<div class="note">
-
-Regístrate y recibe una recomendación según tu cocina.
-
-</div>
-
-</div>
-
-</section>
-
-
-<section class="links">
-
-<a class="link"
-
-href="https://trampaclean.com"
-
-target="_blank">
-
-<div class="ico">🌐</div>
-
-<div class="text">
-
-<b>Visita nuestra web</b>
-
-<span>trampaclean.com</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
-
-
-
-<a class="link"
-
-href="https://wa.me/50768357174?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
-
-target="_blank">
-
-<div class="ico">💬</div>
-
-<div class="text">
-
-<b>Contáctanos</b>
-
-<span>WhatsApp directo</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
-
-
-
-<a class="link"
-
-href="https://instagram.com/trampaclean"
-
-target="_blank">
-
-<div class="ico">📸</div>
-
-<div class="text">
-
-<b>Conócenos</b>
-
-<span>@trampaclean</span>
-
-</div>
-
-<div class="arrow">›</div>
-
-</a>
-
-</section>
-
-</div>
-
+  <div class="blob b1"></div>
+  <div class="blob b2"></div>
+
+  <div class="wrap">
+    <section class="card scanEnter" id="mainCard">
+      <div class="top">
+        <!-- ✅ LOGOS centrados (JPEG) -->
+        <div class="logoRow">
+          <a class="logoLink" href="https://expohorecapanama.com/" target="_blank" rel="noopener">
+            <img src="logo-expo.jpeg" alt="Expo Horeca Panamá">
+          </a>
+
+          <a class="logoLink" href="https://trampaclean.com/" target="_blank" rel="noopener">
+            <img src="logo-trampaclean.jpeg" alt="Trampa Clean">
+          </a>
+        </div>
+
+        <div class="brand">
+          <h1>TRAMPA CLEAN SERVICES</h1>
+          <p>Soluciones profesionales de limpieza</p>
+        </div>
+      </div>
+
+      <div class="content">
+        <h2>¿Tu trampa de grasa está al día?</h2>
+        <p>
+          Si huele mal, se tapa o te preocupa una inspección, nosotros lo resolvemos.
+          Llegamos, limpiamos y dejamos todo en orden.
+        </p>
+      </div>
+
+      <div class="ctaWrap">
+        <a class="cta"
+           href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/?empresa_id=trampaclean&vendedor=trampaclean"
+           target="_blank" rel="noopener">
+          RECLAMA TU DESCUENTO
+        </a>
+        <div class="note">Regístrate y recibe una recomendación según tu cocina.</div>
+      </div>
+    </section>
+
+    <section class="links scanEnter" style="animation-delay:120ms;">
+      <a class="link" href="https://trampaclean.com" target="_blank" rel="noopener">
+        <div class="ico">🌐</div>
+        <div class="text">
+          <b>Visita nuestra web</b>
+          <span>trampaclean.com</span>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+
+      <a class="link"
+         href="https://wa.me/50763515950?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
+         target="_blank" rel="noopener">
+        <div class="ico">💬</div>
+        <div class="text">
+          <b>Contáctanos</b>
+          <span>WhatsApp directo</span>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+
+      <a class="link" href="https://instagram.com/trampaclean" target="_blank" rel="noopener">
+        <div class="ico">📸</div>
+        <div class="text">
+          <b>Conócenos</b>
+          <span>@trampaclean</span>
+        </div>
+        <div class="arrow">›</div>
+      </a>
+    </section>
+  </div>
+
+  <script>
+    // Extra: “tilt” suave para que se sienta flotante (solo si hay movimiento permitido)
+    (function(){
+      const card = document.getElementById("mainCard");
+      if(!card) return;
+
+      const max = 5;      // grados
+      const damp = 0.08;  // suavizado
+      let rx=0, ry=0, tx=0, ty=0;
+
+      function anim(){
+        rx += (tx - rx) * damp;
+        ry += (ty - ry) * damp;
+        card.style.transform = `translateY(-7px) rotateX(${rx}deg) rotateY(${ry}deg)`;
+        requestAnimationFrame(anim);
+      }
+      anim();
+
+      window.addEventListener("mousemove", (e)=>{
+        const x = (e.clientX / window.innerWidth) * 2 - 1;
+        const y = (e.clientY / window.innerHeight) * 2 - 1;
+        tx = (-y * max);
+        ty = ( x * max);
+      }, { passive:true });
+
+      window.addEventListener("deviceorientation", (e)=>{
+        if(e.beta == null || e.gamma == null) return;
+        const beta = Math.max(-25, Math.min(25, e.beta));
+        const gamma = Math.max(-25, Math.min(25, e.gamma));
+        tx = (beta / 25) * (max * 0.9);
+        ty = (gamma / 25) * (max * 0.9);
+      }, true);
+    })();
+  </script>
 </body>
 </html>
-
-
