--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -29,11 +29,11 @@
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial;
       color: var(--text);
       min-height:100vh;
-      overflow-x:hidden; /* solo horizontal */
       background:
         radial-gradient(900px 600px at 15% 10%,rgba(14,38,68,.08),transparent),
         radial-gradient(800px 600px at 90% 20%,rgba(255,74,0,.06),transparent),
         linear-gradient(180deg,#fff,var(--bg));
+      overflow-x:hidden;
     }
 
     /* blobs */
@@ -47,26 +47,32 @@
       pointer-events:none;
       animation: float 18s ease-in-out infinite;
     }
-    .b1{
-      top:-220px; left:-220px;
-      background: radial-gradient(circle,rgba(14,38,68,.52),transparent 70%);
-    }
-    .b2{
-      right:-280px; top:260px;
-      background: radial-gradient(circle,rgba(255,74,0,.35),transparent 70%);
-      animation-delay:-6s;
-    }
+    .b1{ top:-220px; left:-220px; background: radial-gradient(circle,rgba(14,38,68,.52),transparent 70%); }
+    .b2{ right:-280px; top:260px; background: radial-gradient(circle,rgba(255,74,0,.35),transparent 70%); animation-delay:-6s; }
     @keyframes float{ 50%{ transform: translateY(-45px); } }
 
+    /* ✅ Layout: siempre arriba+abajo, sin huecos raros */
     .wrap{
       width:min(560px,92vw);
-      margin:auto;
+      margin:0 auto;
       padding:22px 0 34px;
+      min-height:100vh;
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+      justify-content:flex-start;
     }
 
-    /* ✅ Animación al escanear (entrada) */
+    /* ✅ Importante: NADA se oculta por defecto */
     .scanEnter{
-      opacity: 0;
+      opacity:1;
+      transform:none;
+      filter:none;
+    }
+
+    /* ✅ Animación SOLO cuando body tiene .animate */
+    body.animate .scanEnter{
+      opacity:0;
       transform: translateY(14px) scale(.99);
       filter: blur(10px);
       animation: enter 700ms cubic-bezier(.2,.8,.2,1) forwards;
@@ -133,7 +139,7 @@
       pointer-events:none;
     }
 
-    /* ✅ Logos centrados + flotantes + glow */
+    /* logos con brillo */
     .logoRow{
       display:flex;
       justify-content:center;
@@ -157,15 +163,12 @@
       box-shadow: 0 18px 44px rgba(0,0,0,.18);
       position:relative;
       overflow:hidden;
-      transform: translateZ(0);
       animation: logoFloat 4.8s ease-in-out infinite;
       text-decoration:none;
     }
-    .logoLink:nth-child(2){ animation-delay: -1.1s; }
-    @keyframes logoFloat{
-      0%,100%{ transform: translateY(0px); }
-      50%{ transform: translateY(-6px); }
-    }
+    .logoLink:nth-child(2){ animation-delay:-1.1s; }
+    @keyframes logoFloat{ 0%,100%{ transform: translateY(0); } 50%{ transform: translateY(-6px); } }
+
     .logoLink:before{
       content:"";
       position:absolute;
@@ -187,20 +190,10 @@
       55%{ transform: rotate(12deg) translateX(55%); }
       100%{ transform: rotate(12deg) translateX(55%); }
     }
-    .logoLink:after{
-      content:"";
-      position:absolute;
-      inset:-2px;
-      border-radius: 20px;
-      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.28), transparent 60%),
-                  radial-gradient(circle at 70% 70%, rgba(255,74,0,.14), transparent 62%);
-      filter: blur(10px);
-      opacity:.85;
-      pointer-events:none;
-    }
+
     .logoRow img{
       height:46px;
-      max-width: 190px;
+      max-width:190px;
       object-fit:contain;
       display:block;
       filter: drop-shadow(0 10px 18px rgba(0,0,0,.25));
@@ -237,7 +230,7 @@
       line-height:1.5;
     }
 
-    /* ✅ Botón descuento con glow animado */
+    /* botón glow animado */
     .ctaWrap{ padding:0 22px 22px; }
     .cta{
       position:relative;
@@ -255,7 +248,6 @@
       box-shadow: 0 18px 50px rgba(255,74,0,.30);
       transition: transform .2s, filter .2s;
       overflow:hidden;
-      transform: translateZ(0);
     }
     .cta:hover{ transform: translateY(-2px); filter: brightness(1.02); }
     .cta:before{
@@ -307,6 +299,7 @@
       display:grid;
       gap:12px;
       padding:14px;
+      background: transparent;
     }
     .link{
       display:flex;
@@ -323,10 +316,7 @@
       box-shadow: 0 12px 32px rgba(0,0,0,.06);
       transition: transform .2s, background .2s;
     }
-    .link:hover{
-      transform: translateY(-3px);
-      background: rgba(255,255,255,.72);
-    }
+    .link:hover{ transform: translateY(-3px); background: rgba(255,255,255,.72); }
     .ico{
       width:44px; height:44px;
       display:flex;
@@ -341,18 +331,11 @@
     .text span{ font-size:13px; color:var(--muted); }
     .arrow{ margin-left:auto; font-size:20px; opacity:.5; }
 
-    /* ✅ FIX: si “reducir movimiento” está activado, NO ocultes nada */
     @media (prefers-reduced-motion: reduce){
       .blob, .card, .logoLink, .cta{ animation:none !important; }
       .logoLink:before, .cta:before, .cta:after{ animation:none !important; }
       .link, .cta{ transition:none !important; }
-
-      /* 🔥 esto arregla el bug */
-      .scanEnter{
-        opacity: 1 !important;
-        transform: none !important;
-        filter: none !important;
-      }
+      body.animate .scanEnter{ animation:none !important; opacity:1 !important; transform:none !important; filter:none !important; }
     }
   </style>
 </head>
@@ -368,7 +351,6 @@
           <a class="logoLink" href="https://expohorecapanama.com/" target="_blank" rel="noopener">
             <img src="logo-expo.jpeg" alt="Expo Horeca Panamá">
           </a>
-
           <a class="logoLink" href="https://trampaclean.com/" target="_blank" rel="noopener">
             <img src="logo-trampaclean.jpeg" alt="Trampa Clean">
           </a>
@@ -429,5 +411,12 @@
       </a>
     </section>
   </div>
+
+  <script>
+    // ✅ Activa la animación "al escanear" SIN dejar nada invisible si falla
+    window.addEventListener("load", () => {
+      document.body.classList.add("animate");
+    });
+  </script>
 </body>
 </html>
