--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -348,11 +348,12 @@
     <section class="card scanEnter" id="mainCard">
       <div class="top">
         <div class="logoRow">
-          <a class="logoLink" href="https://expohorecapanama.com/" target="_blank" rel="noopener">
-            <img src="logo-expo.jpeg" alt="Expo Horeca Panamá">
+          <a class="logoLink" href="https://github.com/NEXCARD-dev/NEXCARD/blob/main/Wudpsdfohdq/logo-biodrexa-fog-expo-pro.png" target="_blank" rel="noopener">
+            <img src="logo-biodrexa-fog-expo-pro.png
+" alt="Expo Horeca Panamá">
           </a>
-          <a class="logoLink" href="https://trampaclean.com/" target="_blank" rel="noopener">
-            <img src="logo-trampaclean.jpeg" alt="Trampa Clean">
+          <a class="logoLink" href="https://github.com/NEXCARD-dev/NEXCARD/blob/main/Wudpsdfohdq/logo-trampaclean-services-expo-pro.png" target="_blank" rel="noopener">
+            <img src="logo-trampaclean-services-expo-pro.png" alt="Trampa Clean">
           </a>
         </div>
 
@@ -420,3 +421,4 @@
   </script>
 </body>
 </html>
+
