--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -158,7 +158,7 @@ body{
 
 <div class="top">
   <div class="logoBox">
-    <img src="logo-trampaclean-final-expo.png" alt="Trampa Clean">
+    <img src="TCLOGO.png" alt="Trampa Clean">
   </div>
 </div>
 
@@ -184,9 +184,15 @@ body{
 <section class="links">
 
 <a class="link" href="https://trampaclean.com" target="_blank">
-  <div class="icon">
-    🌐
-  </div>
+<div class="icon">
+
+<svg viewBox="0 0 24 24" fill="#2A8CFF">
+
+<path d="M12 2a10 10 0 100 20 10 10 0 000-20zm6.93 9h-3.1a15.7 15.7 0 00-.78-4.07A8.02 8.02 0 0118.93 11zM12 4c.77 1.06 1.47 3.02 1.73 5H10.3c.26-1.98.96-3.94 1.7-5zM4.07 13h3.1c.16 1.46.48 2.84.92 4.07A8.02 8.02 0 014.07 13zm3.1-2H4.07a8.02 8.02 0 014.02-4.07A15.7 15.7 0 007.17 11zm2.1 2h5.46c-.25 1.98-.96 3.94-1.73 5-.77-1.06-1.48-3.02-1.73-5zm0-2c.25-1.98.96-3.94 1.73-5 .77 1.06 1.48 3.02 1.73 5H9.27zm6.66 6.07c.44-1.23.76-2.61.92-4.07h3.1a8.02 8.02 0 01-4.02 4.07z"/>
+
+</svg>
+
+</div>
   <div class="text">
     <b>Visita nuestra web</b>
     <span>trampaclean.com</span>
@@ -236,3 +242,4 @@ body{
 </div>
 </body>
 </html>
+
