--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -158,7 +158,7 @@ body{
 
 <div class="top">
   <div class="logoBox">
-    <img src="TCLOGO.png" alt="Trampa Clean">
+    <img src="TCLOGO.png" alt="TCLOGO">
   </div>
 </div>
 
@@ -242,4 +242,5 @@ body{
 </div>
 </body>
 </html>
+
 
