--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -172,7 +172,7 @@ body{
 
 <div class="ctaWrap">
   <a class="cta"
-     href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/?empresa_id=trampaclean&vendedor=trampaclean"
+     href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form?empresa_id=trampaclean&vendedor=trampaclean"
      target="_blank">
      RECLAMA TU DESCUENTO
   </a>
@@ -242,5 +242,6 @@ body{
 </div>
 </body>
 </html>
+
 
 
