--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -145,6 +145,12 @@ body{
   height:26px;
 }
 
+.icon img{
+  width:40px;
+  height:40px;
+  object-fit:contain;
+}
+
 .text b{display:block;font-size:15px;}
 .text span{font-size:13px;color:var(--muted);}
 .arrow{margin-left:auto;opacity:.5;}
@@ -204,10 +210,8 @@ body{
    href="https://wa.me/50763515950?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
    target="_blank">
   <div class="icon">
-    <!-- WhatsApp SVG -->
-    <svg fill="#25D366" viewBox="0 0 24 24">
-      <path d="M12 2a10 10 0 00-8.94 14.47L2 22l5.7-1.49A10 10 0 1012 2zm5.47 13.53c-.23.64-1.33 1.2-1.82 1.27-.46.07-1.05.1-1.69-.1a13.66 13.66 0 01-3.97-2.44 11.17 11.17 0 01-2.48-3.07c-.26-.46-.02-.7.2-.93.2-.2.46-.53.7-.8.23-.27.3-.46.46-.76.15-.3.07-.57-.04-.8-.12-.23-1.05-2.53-1.44-3.47-.38-.9-.77-.78-1.05-.8h-.9c-.3 0-.8.12-1.2.57-.4.46-1.57 1.53-1.57 3.73 0 2.2 1.6 4.32 1.83 4.62.23.3 3.15 4.8 7.63 6.73 1.07.46 1.9.73 2.55.93 1.07.34 2.04.29 2.81.17.86-.13 2.65-1.08 3.03-2.12.38-1.04.38-1.93.27-2.12-.12-.2-.42-.3-.88-.53-.46-.23-2.65-1.3-3.06-1.45-.42-.15-.72-.23-1.03.23-.3.46-1.2 1.45-1.47 1.75-.27.3-.54.34-1 .11-.46-.23-1.93-.71-3.68-2.27-1.36-1.22-2.27-2.72-2.54-3.18-.27-.46-.03-.7.2-.92.2-.2.46-.53.7-.8.23-.27.3-.46.46-.76.15-.3.07-.57-.04-.8-.12-.23-1.05-2.53-1.44-3.47"/>
-    </svg>
+    <!-- WhatsApp Image -->
+    <img src="whatsapp.png" alt="WhatsApp">
   </div>
   <div class="text">
     <b>Contáctanos</b>
@@ -218,17 +222,8 @@ body{
 
 <a class="link" href="https://instagram.com/trampaclean" target="_blank">
   <div class="icon">
-    <!-- Instagram SVG -->
-    <svg viewBox="0 0 24 24" fill="url(#ig)">
-      <defs>
-        <linearGradient id="ig" x1="0%" y1="0%" x2="100%" y2="100%">
-          <stop offset="0%" stop-color="#feda75"/>
-          <stop offset="50%" stop-color="#d62976"/>
-          <stop offset="100%" stop-color="#962fbf"/>
-        </linearGradient>
-      </defs>
-      <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 5.5A4.5 4.5 0 1112 16a4.5 4.5 0 010-9zm6 0a1 1 0 110 2 1 1 0 010-2z"/>
-    </svg>
+    <!-- Instagram Image -->
+    <img src="instagram.png" alt="Instagram">
   </div>
   <div class="text">
     <b>Conócenos</b>
@@ -242,6 +237,3 @@ body{
 </div>
 </body>
 </html>
-
-
-
