--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -171,8 +171,7 @@ body{
 <div class="content">
   <h2>¿Tu trampa de grasa está al día?</h2>
   <p>
-    Eliminamos olores, evitamos obstrucciones y cumplimos con normas sanitarias.
-    Servicio profesional para restaurantes y cocinas comerciales.
+    evita emergencias, olores y sanciones en tu cocina
   </p>
 </div>
 
@@ -180,7 +179,7 @@ body{
   <a class="cta"
      href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form?empresa_id=trampaclean&vendedor=trampaclean"
      target="_blank">
-     RECLAMA TU DESCUENTO
+     OBTEN TU 25% DE DESCUENTO
   </a>
   <div class="note">Escanea y recibe atención personalizada.</div>
 </div>
@@ -237,3 +236,4 @@ body{
 </div>
 </body>
 </html>
+
