--- a/Wudpsdfohdq/form.html
+++ b/Wudpsdfohdq/form.html
@@ -654,11 +654,32 @@
                             <span id="selectedText">Selecciona un servicio</span>
                             <div class="arrow"></div>
                         </div>
+                   <div class="options" id="customOptions">
 
-                        <div class="options" id="customOptions">
-                            <div class="option" data-value="Limpieza de Trampas de Grasas">Limpieza de Trampas de Grasas</div>
-                            <div class="option" data-value="Limpieza de Campanas de Cocina">Limpieza de Campanas de Cocina</div>
-                            <div class="option" data-value="Destape de Tuberías Obstruidas">Destape de Tuberías Obstruidas</div>
+<div class="option" data-value="Limpieza de Trampa de Grasa">
+Limpieza de Trampa de Grasa
+</div>
+
+<div class="option" data-value="Biodrexa FOG (tratamiento para grasas y aceites)">
+Biodrexa FOG (tratamiento para grasas y aceites)
+</div>
+
+<div class="option" data-value="Destape de tuberías obstruidas">
+Destape de tuberías obstruidas
+</div>
+
+<div class="option" data-value="Auditorías Técnicas">
+Auditorías Técnicas
+</div>
+
+<div class="option" data-value="Instalación de Trampa de Grasa">
+Instalación de Trampa de Grasa
+</div>
+
+<div class="option" data-value="Limpieza de Campana de cocina">
+Limpieza de Campana de cocina
+</div>
+            
                         </div>
 
                       <select id="intereses" name="intereses">
