--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -178,7 +178,7 @@ body{
      target="_blank">
      OBTEN TU 25% DE DESCUENTO
   </a>
-  <div class="note">Escanea y recibe atención personalizada.</div>
+  <div class="note">click aqui y recibe atención personalizada.</div>
 </div>
 
 </section>
@@ -233,6 +233,7 @@ body{
 </div>
 </body>
 </html>
+
 
 
 
