--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -145,15 +145,30 @@ body{
   height:26px;
 }
 
-.icon img{
-  width:40px;
-  height:40px;
-  object-fit:contain;
-}
-
 .text b{display:block;font-size:15px;}
 .text span{font-size:13px;color:var(--muted);}
 .arrow{margin-left:auto;opacity:.5;}
+
+/* CONTACT FOOTER */
+.contactFooter{
+  margin-top:20px;
+  text-align:center;
+  font-size:14px;
+  color:var(--muted);
+}
+
+.contactFooter a{
+  display:block;
+  text-decoration:none;
+  color:var(--blue);
+  font-weight:600;
+  margin-top:6px;
+}
+
+.contactFooter a:hover{
+  text-decoration:underline;
+}
+
 </style>
 </head>
 
@@ -169,16 +184,20 @@ body{
 </div>
 
 <div class="content">
-  <h1>evita emergencias, olores y sanciones en tu cocina</h1>
+  <h2>¿Tu trampa de grasa está al día?</h2>
+  <p>
+    Eliminamos olores, evitamos obstrucciones y cumplimos con normas sanitarias.
+    Servicio profesional para restaurantes y cocinas comerciales.
+  </p>
 </div>
 
 <div class="ctaWrap">
   <a class="cta"
      href="https://nexcard-dev.github.io/NEXCARD/Wudpsdfohdq/form?empresa_id=trampaclean&vendedor=trampaclean"
      target="_blank">
-     OBTEN TU 25% DE DESCUENTO
+     RECLAMA TU DESCUENTO
   </a>
-  <div class="note">click aqui y recibe atención personalizada.</div>
+  <div class="note">Escanea y recibe atención personalizada.</div>
 </div>
 
 </section>
@@ -187,13 +206,7 @@ body{
 
 <a class="link" href="https://trampaclean.com" target="_blank">
 <div class="icon">
-
-<svg viewBox="0 0 24 24" fill="#2A8CFF">
-
-<path d="M12 2a10 10 0 100 20 10 10 0 000-20zm6.93 9h-3.1a15.7 15.7 0 00-.78-4.07A8.02 8.02 0 0118.93 11zM12 4c.77 1.06 1.47 3.02 1.73 5H10.3c.26-1.98.96-3.94 1.7-5zM4.07 13h3.1c.16 1.46.48 2.84.92 4.07A8.02 8.02 0 014.07 13zm3.1-2H4.07a8.02 8.02 0 014.02-4.07A15.7 15.7 0 007.17 11zm2.1 2h5.46c-.25 1.98-.96 3.94-1.73 5-.77-1.06-1.48-3.02-1.73-5zm0-2c.25-1.98.96-3.94 1.73-5 .77 1.06 1.48 3.02 1.73 5H9.27zm6.66 6.07c.44-1.23.76-2.61.92-4.07h3.1a8.02 8.02 0 01-4.02 4.07z"/>
-
-</svg>
-
+🌐
 </div>
   <div class="text">
     <b>Visita nuestra web</b>
@@ -206,8 +219,7 @@ body{
    href="https://wa.me/50763515950?text=Hola%20Trampa%20Clean%20vengo%20de%20la%20expo"
    target="_blank">
   <div class="icon">
-    <!-- WhatsApp Image -->
-    <img src="whatsapp.png" alt="WhatsApp">
+🟢
   </div>
   <div class="text">
     <b>Contáctanos</b>
@@ -218,8 +230,7 @@ body{
 
 <a class="link" href="https://instagram.com/trampaclean" target="_blank">
   <div class="icon">
-    <!-- Instagram Image -->
-    <img src="instagram.png" alt="Instagram">
+📸
   </div>
   <div class="text">
     <b>Conócenos</b>
@@ -230,7 +241,12 @@ body{
 
 </section>
 
+<!-- CONTACTO FUNCIONAL -->
+<div class="contactFooter">
+  <a href="tel:3991156">📞 399-1156</a>
+  <a href="mailto:info@trampaclean.com">✉ info@trampaclean.com</a>
+</div>
+
 </div>
 </body>
 </html>
-
