--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -326,7 +326,7 @@ OBTEN TU 25% DE DESCUENTO
 
 <div class="icon">
 
-<img src="icon-web.png">
+<img src="web.png">
 
 </div>
 
@@ -403,7 +403,7 @@ target="_blank">
 
 <div class="icon">
 
-<img src="icon-phone.png">
+<img src="telefono.png">
 
 </div>
 
@@ -422,7 +422,7 @@ target="_blank">
 
 <div class="icon">
 
-<img src="icon-email.png">
+<img src="email.png">
 
 </div>
 
@@ -443,4 +443,5 @@ target="_blank">
 </body>
 
 </html>
+
 
