--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -1,40 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TrampaClean - Regístrate</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg0:#f7fbff;
-      --bg1:#eef4ff;
-      --card:#ffffffcc;
-      --border:rgba(6,26,45,.12);
-      --text:#0b1b2a;
-      --muted:#5b6672;
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Trampa Clean</title>
 
-      --navy:#061A2D;
-      --navy2:#0A2A4A;
-      --navy3:#0F3B6A;
+<style>
 
-      --accent:#21A1FF;
-      --accent2:#63D3FF;
+:root{
+--blue:#0E2644;
+--blue2:#103051;
+--orange:#FF4A00;
+--bg:#F3F8FF;
+--text:#0B1B33;
+--muted:#55637c;
+}
 
-      --shadow: 0 24px 60px rgba(0,0,0,.14);
-      --shadow-soft: 0 12px 30px rgba(6,26,45,.12);
-
-      --r-lg: 22px;
-      --r-md: 14px;
-      --ease: cubic-bezier(.22,1,.36,1);
-
-      --maxw: 30rem;
-    }
-
-    *{ margin:0; padding:0; box-sizing:border-box; }
-    html,body{ width:100%; height:100%;
+*{margin:0;padding:0;box-sizing:border-box;}
 
 body{
 
