--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -186,7 +186,7 @@ OBTEN TU 25% DE DESCUENTO
 </a>
 
 <div class="note">
-Escanea y recibe atención personalizada.
+registrate aqui y obtenlo
 </div>
 
 </div>
@@ -313,4 +313,5 @@ target="_blank">
 
 </body>
 </html>
+
 
