--- a/Wudpsdfohdq/index.html
+++ b/Wudpsdfohdq/index.html
@@ -186,7 +186,7 @@ OBTEN TU 25% DE DESCUENTO
 </a>
 
 <div class="note">
-registrate aqui y obtenlo
+¡Registrate aquí para obtenerlo!
 </div>
 
 </div>
@@ -313,5 +313,6 @@ target="_blank">
 
 </body>
 </html>
+
 
 
