--- a/ISDS/index.html
+++ b/ISDS/index.html
@@ -185,7 +185,7 @@ body{
 
   <div class="ctaWrap">
     <!-- ✅ Si no tienes PDF, cambia el link por tu catálogo o quítalo -->
-    <a class="cta" href="brochure.pdf" target="_blank" rel="noopener">VER CATÁLOGO</a>
+    <a class="cta" href="brochure.pdf" target="_blank" rel="noopener">OBTEN TU 25% DE DESCUENTO</a>
     <div class="note">Descubre todos nuestros productos.</div>
   </div>
 
